@@ -111,6 +111,11 @@ for i in $(ls src/classes/*.rb); do
 	sed "s:RUBYBIN:$RUBYBIN:" $i > tmp/$(basename $i)
 done
 
+# Create modules
+for i in $(ls src/modules/*.rb); do
+	sed "s:RUBYBIN:$RUBYBIN:" $i > tmp/$(basename $i)
+done
+
 # Create html files
 for i in $ls src/html/*.html); do
 	sed "s:HOSTNAME:$(hostname -s):g" $i > tmp/$(basename $i)
